--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,4 +45,4 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: cd ${{ env.DIRECTORY }} && buildpkg -p ${{ env.PROJECT_NAME }} -r ${{ secret.DIRECTORY_PKGS }} -w
+          script: cd ${{ env.DIRECTORY }} && buildpkg -p ${{ env.PROJECT_NAME }} -r ${{ secrets.DIRECTORY_PKGS }} -w
