--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,6 @@ on:
 env:
   REPOSITORY: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
   DIRECTORY: /home/pkgbuild
-  PROJECT_NAME: hello-big
 
 jobs:
 
@@ -18,6 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Create Project Name Variable
+        run: |
+          export PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d"/" -f2)
 
       - name: Create Directory Project
         uses: appleboy/ssh-action@master
@@ -31,11 +34,12 @@ jobs:
       - name: Send PKGBUILD
         uses: burnett01/rsync-deployments@5.1
         with:
-          switches: -e 'ssh -p ${{ secrets.SSH_PORT }}' -avuzpg --delete
-          path: ./PKGBUILD
-          remote_path: ${{ env.DIRECTORY }}/${{ env.PROJECT_NAME }}/PKGBUILD
+          switches: -e '-avuzpg --delete
+          path: ./pkgbuild
+          remote_path: ${{ env.DIRECTORY }}/${{ env.PROJECT_NAME }}/pkgbuild
           remote_host: ${{ secrets.SSH_HOST }}
           remote_user: ${{ secrets.SSH_USER }}
+          remote_port: ${{ secrets.SSH_PORT }}
           remote_key: ${{ secrets.SSH_KEY }}
 
       - name: Build Package
@@ -45,4 +49,4 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: cd ${{ env.DIRECTORY }} && buildpkg -p ${{ env.PROJECT_NAME }} -r ${{ secrets.DIRECTORY_PKGS }} -w
+          script: cd ${{ env.DIRECTORY }}/${{ env.PROJECT_NAME }} && buildpkg -p pkgbuild-r ${{ secrets.DIRECTORY_PKGS }} -w
