--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,7 @@ on:
 env:
   REPOSITORY: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
   DIRECTORY: /home/pkgbuild
+  PROJECT_NAME: hello-big
 
 jobs:
 
@@ -17,10 +18,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Create Project Name Variable
-        run: |
-          export PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d"/" -f2)
 
       - name: Create Directory Project
         uses: appleboy/ssh-action@master
