--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           switches: -avuzpg --delete
           path: ./pkgbuild
-          remote_path: ${{ env.DIRECTORY }}/${{ env.PROJECT_NAME }}/pkgbuild
+          remote_path: ${{ env.DIRECTORY }}/${{ env.PROJECT_NAME }}
           remote_host: ${{ secrets.SSH_HOST }}
           remote_user: ${{ secrets.SSH_USER }}
           remote_port: ${{ secrets.SSH_PORT }}
